# wechat-auto

./: README.md  diagnose_setup.py  pyproject.toml  setup_github_actions.py
.github/workflows/: build.yml
src/wechatauto/: __init__.py  app.py
