[build-system]
requires = ["briefcase>=0.3.0"]
build-backend = "briefcase.backends"

[tool.briefcase]
project_name = "WeChat Auto"
bundle = "com.github.wechatauto"
version = "1.0.0"
url = "https://github.com/LuYongzhou/wechatauto"
license = "MIT"
author = "GitHub Actions"
author_email = "actions@github.com"

[tool.briefcase.app.wechatauto]
formal_name = "WeChat Auto"
description = "微信消息自动化助手"
sources = ["src/wechatauto"]
requires = []

[tool.briefcase.app.wechatauto.android]
permissions = [
    "android.permission.SYSTEM_ALERT_WINDOW",
]